--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -132,15 +132,13 @@
     <Compile Include="Model\ServiceChannel.cs" />
     <Compile Include="Model\ServiceCoordinator.cs" />
     <Compile Include="Model\IServiceCoordinator.cs" />
-    <Compile Include="Model\ServiceStateMachine.cs" />
-    <Compile Include="Model\ServiceStateMachineBinding.cs" />
     <Compile Include="Model\LocalServiceController.cs" />
     <Compile Include="Model\ServiceControllerFactory.cs" />
-    <Compile Include="Shelving\PublishChannel.cs" />
+    <Compile Include="Model\PublishChannel.cs" />
     <Compile Include="Shelving\ShelfConfiguration.cs" />
-    <Compile Include="Shelving\ShelfReference.cs" />
-    <Compile Include="Shelving\ShelfServiceController.cs" />
-    <Compile Include="Shelving\ShelfType.cs" />
+    <Compile Include="Model\ShelfReference.cs" />
+    <Compile Include="Model\ShelfServiceController.cs" />
+    <Compile Include="Model\ShelfType.cs" />
     <Compile Include="UninstallCommand.cs" />
     <Compile Include="WindowsServiceCode\WinServiceHelper.cs" />
     <Compile Include="Extensions.cs" />
@@ -153,7 +151,7 @@
     <Compile Include="ProcessExtensions.cs" />
     <Compile Include="Configuration\ServiceActionNames.cs" />
     <Compile Include="Shelving\Bootstrapper.cs" />
-    <Compile Include="Shelving\Shelf.cs" />
+    <Compile Include="Model\Shelf.cs" />
     <Compile Include="Model\HostChannelFactory.cs" />
     <Compile Include="Configuration\RunConfiguration.cs" />
     <Compile Include="Configuration\Dsl\RunnerConfigurator.cs" />
