working on the webserver for Topshelf

--- a/src/Samples/Stuff/app.config
+++ b/src/Samples/Stuff/app.config
@@ -8,6 +8,6 @@
 	</runtime>
 	<appSettings>
 		<!-- use either None, 	FailToCreate,		FailToStart,		FailToStop,		CrashAfterStart -->
-		<add key="failureType" value="CrashAfterStart"/>
+		<add key="failureType" value="None"/>
 	</appSettings>
 </configuration>
