spark is working

--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Commands\UninstallService.cs" />
     <Compile Include="Dashboard\CssConnectionHandler.cs" />
     <Compile Include="Dashboard\DashboardConnectionHandler.cs" />
+    <Compile Include="Dashboard\DashboardView.cs" />
     <Compile Include="Dashboard\ImageConnectionHandler.cs" />
     <Compile Include="Dashboard\ResponseContextExtensions.cs" />
     <Compile Include="Dashboard\SparkRender.cs" />
