--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -102,7 +102,7 @@
     <Compile Include="Dashboard\ImageConnectionHandler.cs" />
     <Compile Include="Dashboard\ResponseContextExtensions.cs" />
     <Compile Include="Dashboard\SparkRender.cs" />
-    <Compile Include="Dashboard\TopshelfDashboard.cs" />
+    <Compile Include="Dashboard\HttpDashboard.cs" />
     <Compile Include="Dashboard\TopshelfView.cs" />
     <Compile Include="Exceptions\TopshelfException.cs" />
     <Compile Include="FileSystem\DirectoryMonitor.cs" />
