adding ilmerge, and fixing small issue with Recovery Options throwing if null

--- a/settings/UppercuT.config
+++ b/settings/UppercuT.config
@@ -27,7 +27,7 @@
   <property name="microsoft.framework" value="net-3.5" overwrite="false" />
   <!-- language.short: vb,cs -->
   <property name="language.short" value="cs" overwrite="false" />
-  <!-- test.framework: none, mbunit2, nunit, gallio - with gallio it must be installed in program files on every computer. Alternatively you can add 26MB to your repo and put it there. Little much for my tastes. -->
+  <!-- test.framework: none, mbunit2, nunit, none, gallio - with gallio it must be installed in program files on every computer. Alternatively you can add 26MB to your repo and put it there. Little much for my tastes. -->
   <property name="test.framework" value="nunit" overwrite="false" />
   <!-- source_control_type: svn, vss, tfs, vault, git, hg -->
   <property name="source_control_type" value="git" overwrite="false" />
@@ -62,7 +62,7 @@
   <!-- These are run two folders down from the top level folder, so figure out the relative path from there and add "..\..\" -->
   <!-- In example, if from the top level directory, you have an item that is in lib\NCover\NCover.Console.exe you should add it here as ..\..\lib\NCover\NCover.Console.exe  -->
   <!-- To not use the tool, change to a location that doesn't exist -->
-  <property name="app.nunit.console" value="..${path.separator}..${path.separator}${folder.references}${path.separator}NUnit${path.separator}nunit-console.exe" overwrite="false" />
+  <property name="app.nunit.console" value="..${path.separator}..${path.separator}${folder.references}${path.separator}NUnit${path.separator}net-2.0${path.separator}nunit-console.exe" overwrite="false" />
   <property name="app.ncover" value="..${path.separator}..${path.separator}${folder.references}${path.separator}NCover${path.separator}NCover.Console.exe" overwrite="false" />
   <property name="app.ncover_explorer" value="..${path.separator}..${path.separator}${folder.references}${path.separator}NCover${path.separator}NCoverExplorer.Console.exe" overwrite="false" />
   <property name="app.ncover.tester" value="..${path.separator}..${path.separator}${folder.references}${path.separator}MbUnit2${path.separator}MbUnit.Cons.exe" overwrite="false" if="${test.framework=='mbunit2'}" />
