First pass towards a new configuration DSL for Topshelf!

--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -92,7 +92,6 @@
     <Compile Include="Bottles\BottleServiceBootstrapper.cs" />
     <Compile Include="Bottles\BottleWatcher.cs" />
     <Compile Include="Commands\Command.cs" />
-    <Compile Include="Commands\CommandUtil.cs" />
     <Compile Include="Commands\RunCommand.cs" />
     <Compile Include="Commands\InstallService.cs" />
     <Compile Include="Configuration\Dsl\IServiceFailureConfiguration.cs" />
@@ -106,6 +105,37 @@
     <Compile Include="Configuration\Dsl\ServiceRecoveryConfigurator.cs" />
     <Compile Include="Configuration\ServiceName.cs" />
     <Compile Include="Commands\UninstallService.cs" />
+    <Compile Include="Config\CommandLineConfigurator.cs" />
+    <Compile Include="Config\InstallActionExtensions.cs" />
+    <Compile Include="Config\Options\AutostartOption.cs" />
+    <Compile Include="Config\Configurators\Configurator.cs" />
+    <Compile Include="Config\HostConfigurators\HostBuilderConfigurator.cs" />
+    <Compile Include="Config\HostConfigurators\HostConfiguration.cs" />
+    <Compile Include="Config\HostConfigurators\HostConfiguratorImpl.cs" />
+    <Compile Include="Config\Builders\InstallBuilder.cs" />
+    <Compile Include="Config\HostConfigurators\InstallHostConfiguratorAction.cs" />
+    <Compile Include="Config\Options\InstallOption.cs" />
+    <Compile Include="Config\Options\InstanceOption.cs" />
+    <Compile Include="Config\Options\Option.cs" />
+    <Compile Include="Config\HostConfigurators\RunAsHostConfigurator.cs" />
+    <Compile Include="Config\Builders\RunBuilder.cs" />
+    <Compile Include="Config\Builders\HostBuilder.cs" />
+    <Compile Include="Config\HostConfigurators\HostConfigurator.cs" />
+    <Compile Include="Config\HostFactory.cs" />
+    <Compile Include="Config\HostConfigurators\RunHostConfiguratorAction.cs" />
+    <Compile Include="Config\Options\RunOption.cs" />
+    <Compile Include="Config\Builders\ServiceBuilder.cs" />
+    <Compile Include="Config\Builders\LocalServiceBuilder.cs" />
+    <Compile Include="Config\ServiceConfigurators\ServiceConfigurator.cs" />
+    <Compile Include="Config\ServiceConfigurators\ServiceConfiguratorImpl.cs" />
+    <Compile Include="Config\HostConfigurators\StartModeHostConfigurator.cs" />
+    <Compile Include="Config\Builders\UninstallBuilder.cs" />
+    <Compile Include="Config\HostConfigurators\UninstallHostConfiguratorAction.cs" />
+    <Compile Include="Config\Options\UninstallOption.cs" />
+    <Compile Include="Config\Options\ServiceAccountOption.cs" />
+    <Compile Include="Config\RunAsExtensions.cs" />
+    <Compile Include="Config\ServiceExtensions.cs" />
+    <Compile Include="Config\StartModeExtensions.cs" />
     <Compile Include="Dashboard\DashboardConnectionHandler.cs" />
     <Compile Include="Dashboard\DashboardView.cs" />
     <Compile Include="Dashboard\ResponseContextExtensions.cs" />
@@ -118,6 +148,11 @@
     <Compile Include="FileSystem\DirectoryMonitorBootstrapper.cs" />
     <Compile Include="FileSystem\FileSystemEventProducer.cs" />
     <Compile Include="FileSystem\PollingFileSystemEventProducer.cs" />
+    <Compile Include="HostConfigurationException.cs" />
+    <Compile Include="HostException.cs" />
+    <Compile Include="Hosts\InstallHost.cs" />
+    <Compile Include="Hosts\ServiceHost.cs" />
+    <Compile Include="Hosts\UninstallHost.cs" />
     <Compile Include="InstallCommand.cs" />
     <Compile Include="Messages\ContinueService.cs" />
     <Compile Include="Messages\CreateShelfService.cs" />
@@ -162,14 +197,18 @@
     <Compile Include="Model\ShelfServiceController.cs" />
     <Compile Include="Model\ShelfType.cs" />
     <Compile Include="UninstallCommand.cs" />
+    <Compile Include="UserAccessControlUtil.cs" />
+    <Compile Include="WindowsServiceCode\HostInstaller.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="WindowsServiceCode\ServiceControlHelper.cs" />
     <Compile Include="WindowsServiceCode\ServiceRecoveryAction.cs" />
     <Compile Include="WindowsServiceCode\ServiceRecoveryOptions.cs" />
     <Compile Include="WindowsServiceCode\WinServiceHelper.cs" />
     <Compile Include="Extensions\TopshelfExtensions.cs" />
     <Compile Include="Exceptions\BuildServiceException.cs" />
-    <Compile Include="Hosts\CommandLineHost.cs" />
-    <Compile Include="Hosts\Host.cs" />
+    <Compile Include="Hosts\ConsoleRunHost.cs" />
+    <Compile Include="Host.cs" />
     <Compile Include="Hosts\WinServiceHost.cs" />
     <Compile Include="WindowsServiceCode\Kernel32.cs" />
     <Compile Include="Model\ServiceFactory.cs" />
