--- a/src/Topshelf.Specs/Topshelf.Specs.csproj
+++ b/src/Topshelf.Specs/Topshelf.Specs.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Configuration\RunnerConfigurator_Specs.cs">
     </Compile>
     <Compile Include="Configuration\Credential_Specs.cs" />
+    <Compile Include="Config\EmptyConfigurator_Specs.cs" />
     <Compile Include="ContextSetup.cs" />
     <Compile Include="DirectoryMonitor_Specs.cs" />
     <Compile Include="ServiceController_Specs.cs" />
