--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -105,6 +105,16 @@
     <Compile Include="Config\CommandLineConfigurator.cs" />
     <Compile Include="Config\DependencyExtensions.cs" />
     <Compile Include="Config\HostConfigurators\DependencyHostConfigurator.cs" />
+    <Compile Include="Config\HostConfigurators\RunProgramConfigurator.cs" />
+    <Compile Include="Config\HostConfigurators\FailureConfigurator.cs" />
+    <Compile Include="Config\HostConfigurators\FailureConfiguratorImpl.cs" />
+    <Compile Include="Config\HostConfigurators\RecoveryConfigurator.cs" />
+    <Compile Include="Config\HostConfigurators\RecoveryHostConfigurator.cs" />
+    <Compile Include="Config\HostConfigurators\RestartComputerConfigurator.cs" />
+    <Compile Include="Config\HostConfigurators\RestartComputerConfiguratorImpl.cs" />
+    <Compile Include="Config\HostConfigurators\RestartServiceConfigurator.cs" />
+    <Compile Include="Config\HostConfigurators\RestartServiceConfiguratorImpl.cs" />
+    <Compile Include="Config\HostConfigurators\RunProgramConfiguratorImpl.cs" />
     <Compile Include="Config\InstallActionExtensions.cs" />
     <Compile Include="Config\Options\AutostartOption.cs" />
     <Compile Include="Config\Configurators\Configurator.cs" />
@@ -124,6 +134,7 @@
     <Compile Include="Config\Options\RunOption.cs" />
     <Compile Include="Config\Builders\ServiceBuilder.cs" />
     <Compile Include="Config\Builders\LocalServiceBuilder.cs" />
+    <Compile Include="Config\RecoveryExtensions.cs" />
     <Compile Include="Config\ServiceConfigurators\ServiceConfigurator.cs" />
     <Compile Include="Config\ServiceConfigurators\ServiceConfiguratorImpl.cs" />
     <Compile Include="Config\HostConfigurators\StartModeHostConfigurator.cs" />
@@ -152,7 +163,7 @@
     <Compile Include="HostConfigurationException.cs" />
     <Compile Include="HostException.cs" />
     <Compile Include="Hosts\InstallHost.cs" />
-    <Compile Include="Hosts\ServiceHost.cs" />
+    <Compile Include="Hosts\AbstactInstallerHost.cs" />
     <Compile Include="Hosts\ShelfHost.cs" />
     <Compile Include="Hosts\UninstallHost.cs" />
     <Compile Include="Messages\ContinueService.cs" />
@@ -193,25 +204,25 @@
     <Compile Include="Model\LocalServiceController.cs" />
     <Compile Include="Model\ServiceControllerFactory.cs" />
     <Compile Include="Model\PublishChannel.cs" />
-    <Compile Include="Model\ServiceInfo.cs" />
-    <Compile Include="Model\ServiceStatus.cs" />
+    <Compile Include="Messages\ServiceInfo.cs" />
+    <Compile Include="Messages\ServiceStatus.cs" />
     <Compile Include="Shelving\ShelfConfiguration.cs" />
     <Compile Include="Model\ShelfReference.cs" />
     <Compile Include="Model\ShelfServiceController.cs" />
     <Compile Include="Model\ShelfType.cs" />
-    <Compile Include="UserAccessControlUtil.cs" />
+    <Compile Include="Windows\WindowsUserAccessControl.cs" />
     <Compile Include="WindowsServiceCode\HostInstaller.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="WindowsServiceCode\ServiceControlHelper.cs" />
-    <Compile Include="WindowsServiceCode\ServiceRecoveryAction.cs" />
-    <Compile Include="WindowsServiceCode\ServiceRecoveryOptions.cs" />
-    <Compile Include="WindowsServiceCode\WinServiceHelper.cs" />
-    <Compile Include="Extensions\TopshelfExtensions.cs" />
+    <Compile Include="Windows\ServiceRecoveryAction.cs" />
+    <Compile Include="Windows\ServiceRecoveryOptions.cs" />
+    <Compile Include="Windows\WindowsServiceControlManager.cs" />
     <Compile Include="Exceptions\BuildServiceException.cs" />
     <Compile Include="Hosts\ConsoleRunHost.cs" />
     <Compile Include="Host.cs" />
-    <Compile Include="Hosts\WinServiceHost.cs" />
+    <Compile Include="Windows\WindowsServiceHost.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="WindowsServiceCode\Kernel32.cs" />
     <Compile Include="Model\ServiceFactory.cs" />
     <Compile Include="Extensions\ProcessExtensions.cs" />
@@ -226,12 +237,6 @@
     <Compile Include="Configuration\Dsl\ServiceConfiguratorImpl.cs" />
     <Compile Include="Configuration\Credentials.cs" />
     <Compile Include="Exceptions\ConfigurationException.cs" />
-    <Compile Include="WindowsServiceCode\HostServiceInstaller.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="WindowsServiceCode\ServiceHost.cs">
-      <SubType>Component</SubType>
-    </Compile>
     <Compile Include="Configuration\Dsl\KnownServiceNames.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runner.cs" />
@@ -254,9 +259,7 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Commands\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <EmbeddedResource Include="Dashboard\views\dashboard.html" />
   </ItemGroup>
