Moved recovery to a separate folder

--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -97,16 +97,16 @@
     <Compile Include="Config\DependencyExtensions.cs" />
     <Compile Include="Config\HostConfigurators\DependencyHostConfigurator.cs" />
     <Compile Include="Config\HostConfigurators\KnownServiceNames.cs" />
-    <Compile Include="Config\HostConfigurators\RunProgramConfigurator.cs" />
-    <Compile Include="Config\HostConfigurators\FailureConfigurator.cs" />
-    <Compile Include="Config\HostConfigurators\FailureConfiguratorImpl.cs" />
-    <Compile Include="Config\HostConfigurators\RecoveryConfigurator.cs" />
-    <Compile Include="Config\HostConfigurators\RecoveryHostConfigurator.cs" />
-    <Compile Include="Config\HostConfigurators\RestartComputerConfigurator.cs" />
-    <Compile Include="Config\HostConfigurators\RestartComputerConfiguratorImpl.cs" />
-    <Compile Include="Config\HostConfigurators\RestartServiceConfigurator.cs" />
-    <Compile Include="Config\HostConfigurators\RestartServiceConfiguratorImpl.cs" />
-    <Compile Include="Config\HostConfigurators\RunProgramConfiguratorImpl.cs" />
+    <Compile Include="Config\RecoveryConfigurators\RunProgramConfigurator.cs" />
+    <Compile Include="Config\RecoveryConfigurators\FailureConfigurator.cs" />
+    <Compile Include="Config\RecoveryConfigurators\FailureConfiguratorImpl.cs" />
+    <Compile Include="Config\RecoveryConfigurators\RecoveryConfigurator.cs" />
+    <Compile Include="Config\RecoveryConfigurators\RecoveryHostConfigurator.cs" />
+    <Compile Include="Config\RecoveryConfigurators\RestartComputerConfigurator.cs" />
+    <Compile Include="Config\RecoveryConfigurators\RestartComputerConfiguratorImpl.cs" />
+    <Compile Include="Config\RecoveryConfigurators\RestartServiceConfigurator.cs" />
+    <Compile Include="Config\RecoveryConfigurators\RestartServiceConfiguratorImpl.cs" />
+    <Compile Include="Config\RecoveryConfigurators\RunProgramConfiguratorImpl.cs" />
     <Compile Include="Config\InstallActionExtensions.cs" />
     <Compile Include="Config\Options\AutostartOption.cs" />
     <Compile Include="Config\Configurators\Configurator.cs" />
