--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Config\DependencyExtensions.cs" />
     <Compile Include="Config\HostConfigurators\DependencyHostConfigurator.cs" />
     <Compile Include="Config\HostConfigurators\KnownServiceNames.cs" />
+    <Compile Include="Config\HostConfigurators\StartConfigurator.cs" />
     <Compile Include="Config\Options\StartOption.cs" />
     <Compile Include="Config\Options\StopOption.cs" />
     <Compile Include="Config\RecoveryConfigurators\RunProgramConfigurator.cs" />
