--- a/src/Samples/StuffOnAShelf/StuffOnAShelf.csproj
+++ b/src/Samples/StuffOnAShelf/StuffOnAShelf.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>StuffOnAShelf</RootNamespace>
     <AssemblyName>StuffOnAShelf</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion Condition=" '$(TargetFrameworkVersion)' == '' ">v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
