--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Bottles\BottleServiceBootstrapper.cs" />
     <Compile Include="Bottles\BottleWatcher.cs" />
     <Compile Include="Configuration\Dsl\RunnerExtensions.cs" />
+    <Compile Include="Config\Builders\HelpBuilder.cs" />
     <Compile Include="Config\Builders\ShelfBuilder.cs" />
     <Compile Include="Config\Builders\StartBuilder.cs" />
     <Compile Include="Config\Builders\StopBuilder.cs" />
@@ -105,6 +106,7 @@
     <Compile Include="Config\HostConfigurators\KnownServiceNames.cs" />
     <Compile Include="Config\HostConfigurators\StartConfigurator.cs" />
     <Compile Include="Config\HostConfigurators\SudoConfigurator.cs" />
+    <Compile Include="Config\Options\HelpOption.cs" />
     <Compile Include="Config\Options\StartOption.cs" />
     <Compile Include="Config\Options\StopOption.cs" />
     <Compile Include="Config\RecoveryConfigurators\RunProgramConfigurator.cs" />
@@ -165,6 +167,7 @@
     <Compile Include="FileSystem\PollingFileSystemEventProducer.cs" />
     <Compile Include="HostConfigurationException.cs" />
     <Compile Include="HostException.cs" />
+    <Compile Include="Hosts\HelpHost.cs" />
     <Compile Include="Hosts\InstallHost.cs" />
     <Compile Include="Hosts\AbstractInstallerHost.cs" />
     <Compile Include="Hosts\ShelfHost.cs" />
@@ -262,7 +265,9 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="HelpText.txt" />
+  </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Dashboard\views\dashboard.html" />
   </ItemGroup>
