--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -107,8 +107,11 @@
     <Compile Include="Config\HostConfigurators\StartConfigurator.cs" />
     <Compile Include="Config\HostConfigurators\SudoConfigurator.cs" />
     <Compile Include="Config\Options\HelpOption.cs" />
+    <Compile Include="Config\Options\LocalServiceOption.cs" />
+    <Compile Include="Config\Options\NetworkServiceOption.cs" />
     <Compile Include="Config\Options\StartOption.cs" />
     <Compile Include="Config\Options\StopOption.cs" />
+    <Compile Include="Config\Options\SudoOption.cs" />
     <Compile Include="Config\RecoveryConfigurators\RunProgramConfigurator.cs" />
     <Compile Include="Config\RecoveryConfigurators\FailureConfigurator.cs" />
     <Compile Include="Config\RecoveryConfigurators\FailureConfiguratorImpl.cs" />
