Some improvements in the build script. NUnit's Test Runner in Ruby is now a lot easier to read, imo.  Minor changes otherwise; I've acquainted myself with the buildfile.rb. Added ignores on XML-missing warnings in the projects so that warnings may actually be read by developers instead of ignored ;). No changes to code, only build support. Added artifacts folder to ignore file.

--- a/src/Topshelf.Host/Topshelf.Host.csproj
+++ b/src/Topshelf.Host/Topshelf.Host.csproj
@@ -24,6 +24,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -33,6 +34,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>..\..\bin\Topshelf.Host.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>Topshelf.Program</StartupObject>
