--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 build_output/*
+build_artifacts/*
 code_drop/*
 log/*
 
@@ -22,3 +23,4 @@ TestResult.xml
 submit.xml
 src/tests/*
 SolutionVersion.cs
+src/CommonAssemblyInfo.cs
