1. Updated the readme file to reflect that it should work for .Net 4 now. Updated the build file to correctly copy the changed project output paths to the build output directory (including the executable host file). 3. Changed the properties in the assemblies to have output directories in their respective folders. 4. Changed the assembly infos to only contain specific assembly titles. This way, the assembly title can be varied depending on the project. Gave .Host.exe and .Specs access to the global SolutionVersion.cs file.

--- a/src/Samples/Stuff/Stuff.csproj
+++ b/src/Samples/Stuff/Stuff.csproj
@@ -59,6 +59,9 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\SolutionVersion.cs">
+      <Link>SolutionVersion.cs</Link>
+    </Compile>
     <Compile Include="FailureType.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
