Mistake to make HelpText.txt a Content file, it was correct to have it as embedded resource

--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -269,7 +269,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="HelpText.txt" />
+    <EmbeddedResource Include="HelpText.txt" />
     <Content Include="Bottles\_About Bottles.txt" />
     <Content Include="Messages\_About Messages.txt" />
   </ItemGroup>
