--- a/src/Topshelf.Host/log4net.config
+++ b/src/Topshelf.Host/log4net.config
@@ -4,7 +4,12 @@
 		<level value="ALL" />
 		<appender-ref ref="LogFileAppender" />
 		<appender-ref ref="ColoredConsoleAppender" />
+		<appender-ref ref="EventLogAppender" />
 	</root>
+
+	<logger name="Topshelf">
+		<level value="INFO" /> 
+	</logger>
 
 	<appender name="ColoredConsoleAppender"
 		   type="log4net.Appender.ColoredConsoleAppender">
@@ -24,7 +29,13 @@
 			<conversionPattern value="%message%newline" />
 		</layout>
 	</appender>
-
+	
+	<appender name="EventLogAppender" type="log4net.Appender.EventLogAppender" >
+		<applicationName value="Topshelf.Host" />
+		<layout type="log4net.Layout.PatternLayout">
+			<conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
+		</layout>
+	</appender>
 
 	<appender name="LogFileAppender"
 		  type="log4net.Appender.RollingFileAppender" >
