I went through many of the problems specified by static analysis and corrected them.While doing so I got rid of a few of the csc-warnings as well. Removed finalizers where there were no unmanaged resources to dispose in order to avoid having them put on the finalizer queue. Made the spark renderer static -- it doesn't have instance-level side-effects. Most of the changes have been adding null checks to public members (actually, most members are public so that's why).

--- a/src/Topshelf.Host/Topshelf.Host.csproj
+++ b/src/Topshelf.Host/Topshelf.Host.csproj
@@ -69,6 +69,7 @@
     <None Include="app.config" />
     <Content Include="log4net.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
   <ItemGroup>
