--- a/src/Samples/Stuff/app.config
+++ b/src/Samples/Stuff/app.config
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <configuration>
-	<startup>
+	<!--<startup>
 		<supportedRuntime version="v2.0.50727"/>
 	</startup>
 	<runtime>
 		<legacyUnhandledExceptionPolicy enabled="1" />
-	</runtime>
+	</runtime>-->
 	<appSettings>
 		<!-- use either None, 	FailToCreate,		FailToStart,		FailToStop,		CrashAfterStart -->
 		<add key="failureType" value="None"/>
