--- a/src/Topshelf.Host/app.config
+++ b/src/Topshelf.Host/app.config
@@ -1,9 +1,6 @@
 <?xml version="1.0"?>
 <configuration>
-  <!--<startup>
-    <supportedRuntime version="v2.0.50727"/>
-  </startup>
   <runtime>
     <legacyUnhandledExceptionPolicy enabled="1" />
-  </runtime>-->
+  </runtime>
 </configuration>
